--- a/compliance/lucene/pom.xml
+++ b/compliance/lucene/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>org.eclipse.rdf4j</groupId>
+		<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
 		<artifactId>rdf4j-storage-compliance</artifactId>
 		<version>2.4-SNAPSHOT</version>
 	</parent>
@@ -27,13 +27,13 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>${project.groupId}</groupId>
+			<groupId>org.eclipse.rdf4j</groupId>
 			<artifactId>rdf4j-rio-rdfxml</artifactId>
 			<version>${project.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>${project.groupId}</groupId>
+			<groupId>org.eclipse.rdf4j</groupId>
 			<artifactId>rdf4j-lucene-testsuite</artifactId>
 			<version>${project.version}</version>
 			<scope>test</scope>
