--- a/compliance/model/pom.xml
+++ b/compliance/model/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>org.eclipse.rdf4j</groupId>
+		<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
 		<artifactId>rdf4j-storage-compliance</artifactId>
 		<version>2.4-SNAPSHOT</version>
 	</parent>
@@ -15,13 +15,13 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>${project.groupId}</groupId>
+			<groupId>org.eclipse.rdf4j</groupId>
 			<artifactId>rdf4j-runtime</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 
 		<dependency>
-			<groupId>${project.groupId}</groupId>
+			<groupId>org.eclipse.rdf4j</groupId>
 			<artifactId>rdf4j-model-testsuite</artifactId>
 			<version>${project.version}</version>
 		</dependency>
