--- a/federation/pom.xml
+++ b/federation/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>org.eclipse.rdf4j</groupId>
+		<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
 		<artifactId>rdf4j-storage-parent</artifactId>
 		<version>2.4-SNAPSHOT</version>
 	</parent>
@@ -22,12 +22,12 @@ The Federation SAIL allows multiple datasets to be virtually combined into a sin
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>org.eclipse.rdf4j</groupId>
+			<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
 			<artifactId>rdf4j-queryalgebra-evaluation</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>org.eclipse.rdf4j</groupId>
+			<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
 			<artifactId>rdf4j-sail-inferencer</artifactId>
 			<version>${project.version}</version>
 		</dependency>
@@ -42,12 +42,12 @@ The Federation SAIL allows multiple datasets to be virtually combined into a sin
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>org.eclipse.rdf4j</groupId>
+			<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
 			<artifactId>rdf4j-repository-sail</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>org.eclipse.rdf4j</groupId>
+			<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
 			<artifactId>rdf4j-sail-memory</artifactId>
 			<version>${project.version}</version>
 			<scope>test</scope>
