--- a/lucene-spin/pom.xml
+++ b/lucene-spin/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <artifactId>rdf4j-storage-parent</artifactId>
-        <groupId>org.eclipse.rdf4j</groupId>
+        <groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
         <version>2.4-SNAPSHOT</version>
     </parent>
     <artifactId>rdf4j-lucene-spin</artifactId>
@@ -49,7 +49,7 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>${project.groupId}</groupId>
+            <groupId>org.eclipse.rdf4j</groupId>
             <artifactId>rdf4j-queryresultio-text</artifactId>
             <version>${project.version}</version>
             <scope>test</scope>
