--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>org.eclipse.rdf4j</groupId>
+  <groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
   <artifactId>rdf4j-storage-parent</artifactId>
   <version>2.4-SNAPSHOT</version>
   <packaging>pom</packaging>
