--- a/shacl/pom.xml
+++ b/shacl/pom.xml
@@ -6,7 +6,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.eclipse.rdf4j</groupId>
+        <groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
         <artifactId>rdf4j-storage-parent</artifactId>
         <version>2.4-SNAPSHOT</version>
     </parent>
