--- a/spin/pom.xml
+++ b/spin/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>org.eclipse.rdf4j</groupId>
+		<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
 		<artifactId>rdf4j-storage-parent</artifactId>
 		<version>2.4-SNAPSHOT</version>
 	</parent>
@@ -20,7 +20,7 @@
 		</dependency>
 
         <dependency>
-			<groupId>${project.groupId}</groupId>
+			<groupId>org.eclipse.rdf4j</groupId>
 			<artifactId>rdf4j-queryalgebra-model</artifactId>
 			<version>${project.version}</version>
 		</dependency>
@@ -30,7 +30,7 @@
 			<version>${project.version}</version>
 		</dependency>
         <dependency>
-			<groupId>${project.groupId}</groupId>
+			<groupId>org.eclipse.rdf4j</groupId>
 			<artifactId>rdf4j-queryrender</artifactId>
 			<version>${project.version}</version>
 		</dependency>
@@ -40,7 +40,7 @@
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>${project.groupId}</groupId>
+			<groupId>org.eclipse.rdf4j</groupId>
 			<artifactId>rdf4j-rio-turtle</artifactId>
 			<version>${project.version}</version>
 		</dependency>
