--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,19 @@
           <url>https://www.eclipse.org/</url>
   </organization>
 
+  <repositories>
+    <repository>
+      <id>sonatype-snapshots</id>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
+  </repositories>
+
   <developers>
           <developer>
                   <id>jeenbroekstra</id>
