--- a/pom.xml
+++ b/pom.xml
@@ -736,6 +736,7 @@
             <artifactId>japicmp-maven-plugin</artifactId>
             <version>0.11.0</version>
             <configuration>
+              <skip>true</skip>
               <oldVersion>
                 <dependency>
                   <groupId>${project.groupId}</groupId>
