--- a/storage/pom.xml
+++ b/storage/pom.xml
@@ -11,7 +11,7 @@
 	<description>RDF4J storaging, indexing and inferencing libraries</description>
 	<dependencies>
 		<dependency>
-			<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+			<groupId>org.eclipse.rdf4j</groupId>
 			<artifactId>rdf4j-client</artifactId>
 			<version>${project.version}</version>
 		</dependency>
