--- a/storage/pom.xml
+++ b/storage/pom.xml
@@ -158,7 +158,7 @@
 					<artifactId>rdf4j-rio-turtle</artifactId>
 				</exclusion>
 				<exclusion>
-					<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+					<groupId>org.eclipse.rdf4j</groupId>
 					<artifactId>rdf4j-repository-manager</artifactId>
 				</exclusion>
 			</exclusions>
