--- a/pom.xml
+++ b/pom.xml
@@ -853,10 +853,16 @@
 			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
 		</repository>
 	</repositories>
+  <distributionManagement>
+    <repository>
+      <id>ukp-oss</id>
+      <url>https://zoidberg.ukp.informatik.tu-darmstadt.de/artifactory/public-ukp-releases-local</url>
+    </repository>
+  </distributionManagement>
 	<scm>
-		<connection>scm:git:git://github.com:eclipse/rdf4j-storage.git</connection>
-		<developerConnection>scm:git:git@github.com:eclipse/rdf4j-storage.git</developerConnection>
-		<url>https://github.com/eclipse/rdf4j-storage</url>
+		<connection>scm:git:git://github.com:inception-project/rdf4j-storage.git</connection>
+		<developerConnection>scm:git:git@github.com:inception-project/rdf4j-storage.git</developerConnection>
+		<url>https://github.com/inception-project/rdf4j-storage.git</url>
 	</scm>
 
 </project>
