--- a/compliance/geosparql/pom.xml
+++ b/compliance/geosparql/pom.xml
@@ -18,7 +18,7 @@
 		<dependency>
 			<groupId>org.eclipse.rdf4j</groupId>
 			<artifactId>rdf4j-geosparql-testsuite</artifactId>
-			<version>${project.version}</version>
+			<version>${rdf4j-core.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
