--- a/lucene-api/pom.xml
+++ b/lucene-api/pom.xml
@@ -50,7 +50,7 @@
 		<dependency>
 			<groupId>org.eclipse.rdf4j</groupId>
 			<artifactId>rdf4j-queryparser-serql</artifactId>
-			<version>${project.version}</version>
+      <version>${rdf4j-core.version}</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
