--- a/lucene-spin/pom.xml
+++ b/lucene-spin/pom.xml
@@ -51,7 +51,7 @@
         <dependency>
             <groupId>org.eclipse.rdf4j</groupId>
             <artifactId>rdf4j-queryresultio-text</artifactId>
-            <version>${project.version}</version>
+            <version>${rdf4j-core.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
