--- a/lucene/pom.xml
+++ b/lucene/pom.xml
@@ -84,7 +84,7 @@
 		<dependency>
 			<groupId>org.eclipse.rdf4j</groupId>
 			<artifactId>rdf4j-rio-rdfxml</artifactId>
-			<version>${project.version}</version>
+      <version>${rdf4j-core.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
