--- a/pom.xml
+++ b/pom.xml
@@ -226,6 +226,7 @@
 		<jackson.version>2.9.6</jackson.version>
 		<jsonldjava.version>0.12.0</jsonldjava.version>
 		<last.japicmp.compare.version>2.0</last.japicmp.compare.version>
+    <rdf4j-core.version>2.4.0</rdf4j-core.version>
 	</properties>
 
 	<dependencyManagement>
@@ -728,7 +729,7 @@
 					<configuration>
 						<oldVersion>
 							<dependency>
-								<groupId>${project.groupId}</groupId>
+								<groupId>org.eclipse.rdf4j</groupId>
 								<artifactId>${project.artifactId}</artifactId>
 								<version>${last.japicmp.compare.version}</version>
 								<type>jar</type>
@@ -841,6 +842,8 @@
 		</extensions>
 	</build>
 
+  <!--
+   - Want to make sure that we do not depend on any RDF4J SNAPSHOT
 	<repositories>
 		<repository>
 			<releases>
@@ -853,6 +856,7 @@
 			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
 		</repository>
 	</repositories>
+  -->
   <distributionManagement>
     <repository>
       <id>ukp-oss</id>
