--- a/spin/pom.xml
+++ b/spin/pom.xml
@@ -22,7 +22,7 @@
         <dependency>
 			<groupId>org.eclipse.rdf4j</groupId>
 			<artifactId>rdf4j-queryalgebra-model</artifactId>
-			<version>${project.version}</version>
+      <version>${rdf4j-core.version}</version>
 		</dependency>
         <dependency>
 			<groupId>${project.groupId}</groupId>
@@ -32,7 +32,7 @@
         <dependency>
 			<groupId>org.eclipse.rdf4j</groupId>
 			<artifactId>rdf4j-queryrender</artifactId>
-			<version>${project.version}</version>
+      <version>${rdf4j-core.version}</version>
 		</dependency>
         <dependency>
 			<groupId>${project.groupId}</groupId>
@@ -42,7 +42,7 @@
 		<dependency>
 			<groupId>org.eclipse.rdf4j</groupId>
 			<artifactId>rdf4j-rio-turtle</artifactId>
-			<version>${project.version}</version>
+      <version>${rdf4j-core.version}</version>
 		</dependency>
 
 		<dependency>
