--- a/storage/pom.xml
+++ b/storage/pom.xml
@@ -13,7 +13,7 @@
 		<dependency>
 			<groupId>org.eclipse.rdf4j</groupId>
 			<artifactId>rdf4j-client</artifactId>
-			<version>${project.version}</version>
+      <version>${rdf4j-core.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
