--- a/repository-sail/pom.xml
+++ b/repository-sail/pom.xml
@@ -69,7 +69,7 @@
 		<dependency>
 			<groupId>org.eclipse.rdf4j</groupId>
 			<artifactId>rdf4j-rio-turtle</artifactId>
-			<version>${project.version}</version>
+      <version>${rdf4j-core.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
