--- a/shacl/pom.xml
+++ b/shacl/pom.xml
@@ -1,20 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
         <groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
         <artifactId>rdf4j-storage-parent</artifactId>
-        <version>2.4-SNAPSHOT</version>
+        <version>2.4.0</version>
     </parent>
 
     <artifactId>rdf4j-shacl</artifactId>
 
     <name>RDF4J: SHACL</name>
-    <description></description>
+    <description />
 
     <dependencies>
         <dependency>
