--- a/storage/pom.xml
+++ b/storage/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
 		<artifactId>rdf4j-storage-parent</artifactId>
-		<version>2.4-SNAPSHOT</version>
+		<version>2.4.0</version>
 	</parent>
 	<artifactId>rdf4j-storage</artifactId>
 	<name>RDF4J: Storage</name>
@@ -437,7 +437,7 @@
 								</includes>
 							</artifactSet>
 							<transformers>
-								<transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
+								<transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
 							</transformers>
 						</configuration>
 					</execution>
