--- a/compliance/serql/pom.xml
+++ b/compliance/serql/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
 		<artifactId>rdf4j-storage-compliance</artifactId>
-		<version>2.4.0</version>
+		<version>2.4-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>rdf4j-serql-compliance</artifactId>
