--- a/compliance/shacl/pom.xml
+++ b/compliance/shacl/pom.xml
@@ -3,9 +3,9 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+		<groupId>org.eclipse.rdf4j</groupId>
 		<artifactId>rdf4j-storage-compliance</artifactId>
-		<version>2.4-SNAPSHOT</version>
+		<version>2.4.4-inception-1-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>rdf4j-shacl-compliance</artifactId>
@@ -15,9 +15,9 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>org.eclipse.rdf4j</groupId>
+      <groupId>org.eclipse.rdf4j</groupId>
 			<artifactId>rdf4j-shacl-testsuite</artifactId>
-      <version>${rdf4j-core.version}</version>
+      <version>${rdf4j-testsuite.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
