--- a/compliance/store/pom.xml
+++ b/compliance/store/pom.xml
@@ -3,9 +3,9 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+		<groupId>org.eclipse.rdf4j</groupId>
 		<artifactId>rdf4j-storage-compliance</artifactId>
-		<version>2.4-SNAPSHOT</version>
+		<version>2.4.4-inception-1-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>rdf4j-store-compliance</artifactId>
@@ -15,21 +15,21 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>org.eclipse.rdf4j</groupId>
+      <groupId>org.eclipse.rdf4j</groupId>
 			<artifactId>rdf4j-store-testsuite</artifactId>
-      <version>${rdf4j-core.version}</version>
+      <version>${rdf4j-testsuite.version}</version>
 		</dependency>
 
 		<dependency>
-			<groupId>org.eclipse.rdf4j</groupId>
+      <groupId>org.eclipse.rdf4j</groupId>
 			<artifactId>rdf4j-serql-testsuite</artifactId>
-      <version>${rdf4j-core.version}</version>
+      <version>${rdf4j-testsuite.version}</version>
 		</dependency>
 
 		<dependency>
-			<groupId>org.eclipse.rdf4j</groupId>
+      <groupId>org.eclipse.rdf4j</groupId>
 			<artifactId>rdf4j-sparql-testsuite</artifactId>
-      <version>${rdf4j-core.version}</version>
+      <version>${rdf4j-testsuite.version}</version>
 		</dependency>
 
 		<dependency>
