--- a/lucene-spin/pom.xml
+++ b/lucene-spin/pom.xml
@@ -3,8 +3,8 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <artifactId>rdf4j-storage-parent</artifactId>
-        <groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
-        <version>2.4-SNAPSHOT</version>
+        <groupId>org.eclipse.rdf4j</groupId>
+        <version>2.4.4-inception-1-SNAPSHOT</version>
     </parent>
     <artifactId>rdf4j-lucene-spin</artifactId>
     <name>RDF4J Lucene Sail Spin</name>
