--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,9 @@
 
 	<modelVersion>4.0.0</modelVersion>
 
-  <groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+  <groupId>org.eclipse.rdf4j</groupId>
   <artifactId>rdf4j-storage-parent</artifactId>
-  <version>2.4-SNAPSHOT</version>
+  <version>2.4.4-inception-1-SNAPSHOT</version>
   <packaging>pom</packaging>
 
 	<name>RDF4J Storage</name>
@@ -224,7 +224,9 @@
 		<jackson.version>2.9.6</jackson.version>
 		<jsonldjava.version>0.12.0</jsonldjava.version>
 		<last.japicmp.compare.version>2.0</last.japicmp.compare.version>
-    <rdf4j-core.version>2.4.0</rdf4j-core.version>
+    <rdf4j-core.version>2.4.4-inception-1-SNAPSHOT</rdf4j-core.version>
+    <rdf4j-tools.version>2.4.4</rdf4j-tools.version>
+    <rdf4j-testsuite.version>2.4.4</rdf4j-testsuite.version>
 	</properties>
 
 	<dependencyManagement>
