--- a/sail-spin/pom.xml
+++ b/sail-spin/pom.xml
@@ -3,9 +3,9 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+		<groupId>org.eclipse.rdf4j</groupId>
 		<artifactId>rdf4j-storage-parent</artifactId>
-		<version>2.4-SNAPSHOT</version>
+		<version>2.4.4-inception-1-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>rdf4j-sail-spin</artifactId>
@@ -17,22 +17,22 @@ The SPIN SAIL adds constraint checking and inferencing using SPIN to a base SAIL
 
 	<dependencies>
 		<dependency>
-			<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+			<groupId>org.eclipse.rdf4j</groupId>
 			<artifactId>rdf4j-spin</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+			<groupId>org.eclipse.rdf4j</groupId>
 			<artifactId>rdf4j-repository-sail</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+			<groupId>org.eclipse.rdf4j</groupId>
 			<artifactId>rdf4j-sail-inferencer</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+			<groupId>org.eclipse.rdf4j</groupId>
 			<artifactId>rdf4j-sail-base</artifactId>
 			<version>${project.version}</version>
 		</dependency>
@@ -48,7 +48,7 @@ The SPIN SAIL adds constraint checking and inferencing using SPIN to a base SAIL
             <scope>test</scope>
         </dependency>
 		<dependency>
-			<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+			<groupId>org.eclipse.rdf4j</groupId>
 			<artifactId>rdf4j-sail-memory</artifactId>
 			<version>${project.version}</version>
 			<scope>test</scope>
