--- a/storage/pom.xml
+++ b/storage/pom.xml
@@ -2,9 +2,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+		<groupId>org.eclipse.rdf4j</groupId>
 		<artifactId>rdf4j-storage-parent</artifactId>
-		<version>2.4-SNAPSHOT</version>
+		<version>2.4.4-inception-1-SNAPSHOT</version>
 	</parent>
 	<artifactId>rdf4j-storage</artifactId>
 	<name>RDF4J: Storage</name>
@@ -16,145 +16,145 @@
       <version>${rdf4j-core.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+			<groupId>org.eclipse.rdf4j</groupId>
 			<artifactId>rdf4j-queryalgebra-evaluation</artifactId>
 			<version>${project.version}</version>
 			<exclusions>
 				<exclusion>
-					<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+					<groupId>org.eclipse.rdf4j</groupId>
 					<artifactId>rdf4j-queryalgebra-model</artifactId>
 				</exclusion>
 				<exclusion>
-					<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+					<groupId>org.eclipse.rdf4j</groupId>
 					<artifactId>rdf4j-model</artifactId>
 				</exclusion>
 				<exclusion>
-					<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+					<groupId>org.eclipse.rdf4j</groupId>
 					<artifactId>rdf4j-query</artifactId>
 				</exclusion>
 				<exclusion>
-					<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+					<groupId>org.eclipse.rdf4j</groupId>
 					<artifactId>rdf4j-repository-sparql</artifactId>
 				</exclusion>
 				<exclusion>
-					<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+					<groupId>org.eclipse.rdf4j</groupId>
 					<artifactId>rdf4j-http-client</artifactId>
 				</exclusion>
 				<exclusion>
-					<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+					<groupId>org.eclipse.rdf4j</groupId>
 					<artifactId>rdf4j-util</artifactId>
 				</exclusion>
 			</exclusions>
 		</dependency>
 		<dependency>
-			<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+			<groupId>org.eclipse.rdf4j</groupId>
 			<artifactId>rdf4j-queryalgebra-geosparql</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+			<groupId>org.eclipse.rdf4j</groupId>
 			<artifactId>rdf4j-repository-dataset</artifactId>
 			<version>${project.version}</version>
 			<exclusions>
 				<exclusion>
-					<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+					<groupId>org.eclipse.rdf4j</groupId>
 					<artifactId>rdf4j-model</artifactId>
 				</exclusion>
 				<exclusion>
-					<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+					<groupId>org.eclipse.rdf4j</groupId>
 					<artifactId>rdf4j-query</artifactId>
 				</exclusion>
 				<exclusion>
-					<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+					<groupId>org.eclipse.rdf4j</groupId>
 					<artifactId>rdf4j-repository-api</artifactId>
 				</exclusion>
 				<exclusion>
-					<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+					<groupId>org.eclipse.rdf4j</groupId>
 					<artifactId>rdf4j-rio-api</artifactId>
 				</exclusion>
 			</exclusions>
 		</dependency>
 		<dependency>
-			<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+			<groupId>org.eclipse.rdf4j</groupId>
 			<artifactId>rdf4j-repository-sail</artifactId>
 			<version>${project.version}</version>
 			<exclusions>
 				<exclusion>
-					<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+					<groupId>org.eclipse.rdf4j</groupId>
 					<artifactId>rdf4j-http-client</artifactId>
 				</exclusion>
 				<exclusion>
-					<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+					<groupId>org.eclipse.rdf4j</groupId>
 					<artifactId>rdf4j-model</artifactId>
 				</exclusion>
 				<exclusion>
-					<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+					<groupId>org.eclipse.rdf4j</groupId>
 					<artifactId>rdf4j-query</artifactId>
 				</exclusion>
 				<exclusion>
-					<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+					<groupId>org.eclipse.rdf4j</groupId>
 					<artifactId>rdf4j-queryalgebra-model</artifactId>
 				</exclusion>
 				<exclusion>
-					<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+					<groupId>org.eclipse.rdf4j</groupId>
 					<artifactId>rdf4j-queryparser-api</artifactId>
 				</exclusion>
 				<exclusion>
-					<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+					<groupId>org.eclipse.rdf4j</groupId>
 					<artifactId>rdf4j-repository-api</artifactId>
 				</exclusion>
 				<exclusion>
-					<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+					<groupId>org.eclipse.rdf4j</groupId>
 					<artifactId>rdf4j-rio-api</artifactId>
 				</exclusion>
 				<exclusion>
-					<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+					<groupId>org.eclipse.rdf4j</groupId>
 					<artifactId>rdf4j-rio-trig</artifactId>
 				</exclusion>
 				<exclusion>
-					<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+					<groupId>org.eclipse.rdf4j</groupId>
 					<artifactId>rdf4j-rio-turtle</artifactId>
 				</exclusion>
 				<exclusion>
-					<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+					<groupId>org.eclipse.rdf4j</groupId>
 					<artifactId>rdf4j-util</artifactId>
 				</exclusion>
 			</exclusions>
 		</dependency>
 		<dependency>
-			<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+			<groupId>org.eclipse.rdf4j</groupId>
 			<artifactId>rdf4j-sail-base</artifactId>
 			<version>${project.version}</version>
 			<exclusions>
 				<exclusion>
-					<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+					<groupId>org.eclipse.rdf4j</groupId>
 					<artifactId>rdf4j-model</artifactId>
 				</exclusion>
 				<exclusion>
-					<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+					<groupId>org.eclipse.rdf4j</groupId>
 					<artifactId>rdf4j-query</artifactId>
 				</exclusion>
 				<exclusion>
-					<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+					<groupId>org.eclipse.rdf4j</groupId>
 					<artifactId>rdf4j-queryalgebra-model</artifactId>
 				</exclusion>
 				<exclusion>
-					<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+					<groupId>org.eclipse.rdf4j</groupId>
 					<artifactId>rdf4j-util</artifactId>
 				</exclusion>
 			</exclusions>
 		</dependency>
 		<dependency>
-			<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+			<groupId>org.eclipse.rdf4j</groupId>
 			<artifactId>rdf4j-sail-federation</artifactId>
 			<version>${project.version}</version>
 			<exclusions>
 				<exclusion>
-					<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+					<groupId>org.eclipse.rdf4j</groupId>
 					<artifactId>rdf4j-model</artifactId>
 				</exclusion>
 				<exclusion>
-					<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+					<groupId>org.eclipse.rdf4j</groupId>
 					<artifactId>rdf4j-rio-turtle</artifactId>
 				</exclusion>
 				<exclusion>
@@ -164,140 +164,140 @@
 			</exclusions>
 		</dependency>
 		<dependency>
-			<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+			<groupId>org.eclipse.rdf4j</groupId>
 			<artifactId>rdf4j-sail-inferencer</artifactId>
 			<version>${project.version}</version>
 			<exclusions>
 				<exclusion>
-					<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+					<groupId>org.eclipse.rdf4j</groupId>
 					<artifactId>rdf4j-model</artifactId>
 				</exclusion>
 				<exclusion>
-					<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+					<groupId>org.eclipse.rdf4j</groupId>
 					<artifactId>rdf4j-query</artifactId>
 				</exclusion>
 				<exclusion>
-					<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+					<groupId>org.eclipse.rdf4j</groupId>
 					<artifactId>rdf4j-queryalgebra-model</artifactId>
 				</exclusion>
 				<exclusion>
-					<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+					<groupId>org.eclipse.rdf4j</groupId>
 					<artifactId>rdf4j-queryparser-api</artifactId>
 				</exclusion>
 				<exclusion>
-					<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+					<groupId>org.eclipse.rdf4j</groupId>
 					<artifactId>rdf4j-queryparser-serql</artifactId>
 				</exclusion>
 				<exclusion>
-					<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+					<groupId>org.eclipse.rdf4j</groupId>
 					<artifactId>rdf4j-repository-api</artifactId>
 				</exclusion>
 				<exclusion>
-					<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+					<groupId>org.eclipse.rdf4j</groupId>
 					<artifactId>rdf4j-rio-api</artifactId>
 				</exclusion>
 				<exclusion>
-					<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+					<groupId>org.eclipse.rdf4j</groupId>
 					<artifactId>rdf4j-util</artifactId>
 				</exclusion>
 			</exclusions>
 		</dependency>
     <!--
 		<dependency>
-			<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+			<groupId>org.eclipse.rdf4j</groupId>
 			<artifactId>rdf4j-sail-elasticsearch</artifactId>
 			<version>${project.version}</version>
 		</dependency>
     -->
 		<dependency>
-			<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+			<groupId>org.eclipse.rdf4j</groupId>
 			<artifactId>rdf4j-sail-lucene</artifactId>
 			<version>${project.version}</version>
 		</dependency>
     <!--
 		<dependency>
-			<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+			<groupId>org.eclipse.rdf4j</groupId>
 			<artifactId>rdf4j-sail-solr</artifactId>
 			<version>${project.version}</version>
 		</dependency>
     -->
 		<dependency>
-			<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+			<groupId>org.eclipse.rdf4j</groupId>
 			<artifactId>rdf4j-sail-memory</artifactId>
 			<version>${project.version}</version>
 			<exclusions>
 				<exclusion>
-					<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+					<groupId>org.eclipse.rdf4j</groupId>
 					<artifactId>rdf4j-queryalgebra-model</artifactId>
 				</exclusion>
 				<exclusion>
-					<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+					<groupId>org.eclipse.rdf4j</groupId>
 					<artifactId>rdf4j-model</artifactId>
 				</exclusion>
 				<exclusion>
-					<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+					<groupId>org.eclipse.rdf4j</groupId>
 					<artifactId>rdf4j-query</artifactId>
 				</exclusion>
 				<exclusion>
-					<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+					<groupId>org.eclipse.rdf4j</groupId>
 					<artifactId>rdf4j-util</artifactId>
 				</exclusion>
 			</exclusions>
 		</dependency>
 		<dependency>
-			<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+			<groupId>org.eclipse.rdf4j</groupId>
 			<artifactId>rdf4j-sail-nativerdf</artifactId>
 			<version>${project.version}</version>
 			<exclusions>
 				<exclusion>
-					<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+					<groupId>org.eclipse.rdf4j</groupId>
 					<artifactId>rdf4j-queryalgebra-model</artifactId>
 				</exclusion>
 				<exclusion>
-					<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+					<groupId>org.eclipse.rdf4j</groupId>
 					<artifactId>rdf4j-model</artifactId>
 				</exclusion>
 				<exclusion>
-					<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+					<groupId>org.eclipse.rdf4j</groupId>
 					<artifactId>rdf4j-query</artifactId>
 				</exclusion>
 				<exclusion>
-					<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+					<groupId>org.eclipse.rdf4j</groupId>
 					<artifactId>rdf4j-util</artifactId>
 				</exclusion>
 			</exclusions>
 		</dependency>
 		<dependency>
-			<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+			<groupId>org.eclipse.rdf4j</groupId>
 			<artifactId>rdf4j-sail-spin</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+			<groupId>org.eclipse.rdf4j</groupId>
 			<artifactId>rdf4j-lucene-spin</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+			<groupId>org.eclipse.rdf4j</groupId>
 			<artifactId>rdf4j-spin</artifactId>
 			<version>${project.version}</version>
 			<exclusions>
 				<exclusion>
-					<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+					<groupId>org.eclipse.rdf4j</groupId>
 					<artifactId>rdf4j-queryalgebra-model</artifactId>
 				</exclusion>
 				<exclusion>
-					<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+					<groupId>org.eclipse.rdf4j</groupId>
 					<artifactId>rdf4j-queryrender</artifactId>
 				</exclusion>
 				<exclusion>
-					<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+					<groupId>org.eclipse.rdf4j</groupId>
 					<artifactId>rdf4j-rio-turtle</artifactId>
 				</exclusion>
 			</exclusions>
 		</dependency>
 		<dependency>
-			<groupId>de.tudarmstadt.ukp.inception.rdf4j</groupId>
+			<groupId>org.eclipse.rdf4j</groupId>
 			<artifactId>rdf4j-shacl</artifactId>
 			<version>${project.version}</version>
 		</dependency>
